[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/CampaignDetail.gd" id="1_1swh4"]

[node name="CampaignDetail" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1swh4")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
size_flags_vertical = 3

[node name="Header" type="VBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="Margin/VBox/Header"]
layout_mode = 2
text = "Title"
theme_override_font_sizes/font_size = 22

[node name="Meta" type="Label" parent="Margin/VBox/Header"]
layout_mode = 2
text = "Author Â· v0.0.0"
modulate = Color(0.9, 0.9, 0.9, 0.8)

[node name="Desc" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "Description"
autowrap_mode = 2

[node name="Actions" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="NewGame" type="Button" parent="Margin/VBox/Actions"]
layout_mode = 2
text = "New Game"

[node name="Load" type="Button" parent="Margin/VBox/Actions"]
layout_mode = 2
text = "Load Selected"

[node name="Delete" type="Button" parent="Margin/VBox/Actions"]
layout_mode = 2
text = "Delete Selected"

[node name="Slots" type="VBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="SlotLabel" type="Label" parent="Margin/VBox/Slots"]
layout_mode = 2
text = "Save Slots"

[node name="SlotList" type="ItemList" parent="Margin/VBox/Slots"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="Margin/VBox/Actions/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Margin/VBox/Actions/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Margin/VBox/Actions/Delete" to="." method="_on_delete_pressed"]


